
2005-03-16  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Popup).

2005-03-14  Florian Boor <florian@kernelconcepts.de>

	* pixmaps.c, popup.c: Fixed some formating.
	* doc/tmpl/*.sgml: More documentation (Pixmaps, Popup).

2005-03-11  Florian Boor <florian@kernelconcepts.de>

	* render.c, gpe/render.h, doc/libgpewidget-render.html: removed (obsolete)
	* Makefile: Update members.

2005-03-09  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Init, Spacing).
	
2005-03-04  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Smallbox, Render).

2005-03-03  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Question).

2005-02-14  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/i*.sgml: More documentation.

2005-02-13  Florian Boor <florian@kernelconcepts.de>

	* gpehelp.c: Add support for gpe-helpviewer. Use PREFIX for apps to call.
	* doc/tmpl/*.sgml: More documentation (GpeDateCombo).

2005-02-07  Florian Boor <florian@kernelconcepts.de>

	* doc/style.css: Added style definition file for documentation.
	
2005-02-07  Florian Boor <florian@kernelconcepts.de>

	* Makefile: Don't build documentation per default.
	* doc/tmpl/gpetimesel.sgml: More documentation.
	
2005-02-02  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (GpeIconList*).

2005-02-02  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: Documentation improvement.

2005-01-31  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: Documentation improvement.
	* gpehelp.c: Formating fix, fixed typo.

2005-01-28  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/gpeclockface.sgml: Documentation improvement.
	* doc/tmpl/gpeiconlist.sgml: Documentation improvement.

2005-01-27  Florian Boor <florian@kernelconcepts.de>

	* doc/*: Add documentation framework.
	* Makefile: Add stuff to build documentation (target: doc). 
