@@ -1,16 +1,0 @@
-<!-- ##### SECTION Title ##### -->
-Render
-
-<!-- ##### SECTION Short_Description ##### -->
-Render images from pixbuf. (obsolete)
-
-<!-- ##### SECTION Long_Description ##### -->
-<para>
-
-</para>
-
-<!-- ##### SECTION See_Also ##### -->
-<para>
-
-</para>
-
