@@ -1,3 +1,6 @@
+2005-03-17  Florian Boor <florian@kernelconcepts.de>
+
+	* Removed obsolete files, removed obsolete sections from manual.
 
 2005-03-16  Florian Boor <florian@kernelconcepts.de>
 
